--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "0okkjS6imtMS"
       ],
-      "authorship_tag": "ABX9TyP8UOcYdLnasHYkXJyFOW3a",
+      "authorship_tag": "ABX9TyMz2YvOWCS68A1LEOcAvBpK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -424,7 +424,7 @@
         "#@markdown # $\\color{Turquoise}{\\text{Método de Jacobi}}$\n",
         "#@markdown > $\\color{gray}{\\text{m_jacobi}}$\n",
         "\n",
-        "def m_jacobi(hea, ci=[[0, 0, 0]]):\n",
+        "def m_jacobi(hea, ci=[0, 0, 0], ni=10):\n",
         "\n",
         "    import numpy as np\n",
         "\n",
@@ -443,80 +443,30 @@
         "\n",
         "        return x\n",
         "\n",
+        "    ci = [ci]\n",
+        "\n",
         "    arr = np.array(hea, dtype=np.float64, copy=True)\n",
         "\n",
-        "    for j in range(3):\n",
+        "    for j in range(ni):\n",
         "        ci.append([])\n",
         "        for i in range(len(arr)):\n",
         "            ci[j+1].append(v(arr, ci[j], line=i))\n",
-        "    print(ci)\n"
+        "    \n",
+        "    return ci"
       ],
-      "execution_count": 277,
+      "execution_count": 287,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fdXv8rv1-hh-"
+        "id": "ICUBvDaN-wtu"
       },
       "source": [
-        "import numpy as np"
+        "arr = [[10, 2, 1, 7], [1, 5, 1, -8], [2, 3, 10, 6]]\n",
+        "ci = [1, 2, 3]"
       ],
-      "execution_count": 146,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ICUBvDaN-wtu",
-        "outputId": "f8818ea0-1433-4dd1-bc58-0fe13dd4ddc4"
-      },
-      "source": [
-        "arr = np.array([[10, 2, 1, 7], [1, 5, 1, -8], [2, 3, 10, 6]], dtype=np.float64)\n",
-        "ci = [0, 0, 0]\n",
-        "arr"
-      ],
-      "execution_count": 152,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[10.,  2.,  1.,  7.],\n",
-              "       [ 1.,  5.,  1., -8.],\n",
-              "       [ 2.,  3., 10.,  6.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 152
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-hurXSVp_JD_"
-      },
-      "source": [
-        "def v(arr, cond, line=0):\n",
-        "    '''\n",
-        "        Retorna uma matriz solução\n",
-        "    '''\n",
-        "    n, rs = [arr[line][-1]], 0\n",
-        "    n.append(\n",
-        "        [x*i for x, i, c in zip(arr[line], cond, range(len(arr[0])))\n",
-        "        if c != line]\n",
-        "    )\n",
-        "    for k in n[1]:\n",
-        "        rs += k\n",
-        "    x = (n[0]-rs)/arr[line][line]\n",
-        "\n",
-        "    return x"
-      ],
-      "execution_count": 271,
+      "execution_count": 289,
       "outputs": []
     },
     {
@@ -525,156 +475,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "bX3e2g75kcu2",
-        "outputId": "549b6bd8-b877-4dff-b4f9-d82f7ffbf109"
+        "id": "YdPronVw7Pih",
+        "outputId": "3a5b2496-9eff-4a84-daff-767b95c046a6"
       },
       "source": [
-        "nv = v(arr, ci, line=2); nv"
+        "%timeit m_jacobi(arr, ni=10000)\n",
+        "print(m_jacobi(arr, ni=10000)[-1])"
       ],
-      "execution_count": 154,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.6"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 154
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pH35FGuq3tT7",
-        "outputId": "9eb3b322-d7dc-4045-db9b-97be89cde43a"
-      },
-      "source": [
-        "c2 = [[1, 2, 3]]\n",
-        "c2.append([])\n",
-        "c2[1].append(2)\n",
-        "c2"
-      ],
-      "execution_count": 265,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[1, 2, 3], [2]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 265
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Wce6xd246LyR",
-        "outputId": "335e7416-b4e8-4be8-f6b3-689a692578e1"
-      },
-      "source": [
-        "ci = [[0, 0, 0]]\n",
-        "\n",
-        "for j in range(3):\n",
-        "    ci.append([])\n",
-        "    for i in range(len(arr)):\n",
-        "        ci[j+1].append(v(arr, ci[j], line=i))\n",
-        "print(ci)"
-      ],
-      "execution_count": 275,
+      "execution_count": 294,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001, -1.98, 0.966]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GmrT7CuTmLbm",
-        "outputId": "135b418f-716a-457b-cd58-ba18f832c6d4"
-      },
-      "source": [
-        "ci = [[0, 0, 0]]\n",
-        "\n",
-        "for j in range(3):\n",
-        "    print(ci, '\\n'); ci.append([])\n",
-        "    for i in range(len(arr)):\n",
-        "\n",
-        "        line = i; n, rs = [arr[line][-1]], 0\n",
-        "        n.append(\n",
-        "            [x*i for x, i, c in zip(arr[line], ci[j], range(len(arr[0])))\n",
-        "            if c != line]\n",
-        "        )\n",
-        "        print(f'\\033[34m{n}\\033[')\n",
-        "        for k in n[1]:\n",
-        "            rs += k\n",
-        "        print(f'({n[0]}-\\033[32m{rs}\\033[)/{arr[line][line]} = {(n[0]-rs)/arr[line][line]}')\n",
-        "        ci[j+1].append((n[0]-rs)/arr[line][line])\n",
-        "        print(f'\\033[31m{ci}\\033[')\n",
-        "        \n",
-        "    print()"
-      ],
-      "execution_count": 270,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[0, 0, 0]] \n",
-            "\n",
-            "\u001b[34m[7.0, [0.0, 0.0]]\u001b[\n",
-            "(7.0-\u001b[32m0.0\u001b[)/10.0 = 0.7\n",
-            "\u001b[31m[[0, 0, 0], [0.7]]\u001b[\n",
-            "\u001b[34m[-8.0, [0.0, 0.0]]\u001b[\n",
-            "(-8.0-\u001b[32m0.0\u001b[)/5.0 = -1.6\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6]]\u001b[\n",
-            "\u001b[34m[6.0, [0.0, 0.0]]\u001b[\n",
-            "(6.0-\u001b[32m0.0\u001b[)/10.0 = 0.6\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6]]\u001b[\n",
-            "\n",
-            "[[0, 0, 0], [0.7, -1.6, 0.6]] \n",
-            "\n",
-            "\u001b[34m[7.0, [-3.2, 0.6]]\u001b[\n",
-            "(7.0-\u001b[32m-2.6\u001b[)/10.0 = 0.96\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96]]\u001b[\n",
-            "\u001b[34m[-8.0, [0.7, 0.6]]\u001b[\n",
-            "(-8.0-\u001b[32m1.2999999999999998\u001b[)/5.0 = -1.86\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86]]\u001b[\n",
-            "\u001b[34m[6.0, [1.4, -4.800000000000001]]\u001b[\n",
-            "(6.0-\u001b[32m-3.400000000000001\u001b[)/10.0 = 0.9400000000000001\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001]]\u001b[\n",
-            "\n",
-            "[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001]] \n",
-            "\n",
-            "\u001b[34m[7.0, [-3.72, 0.9400000000000001]]\u001b[\n",
-            "(7.0-\u001b[32m-2.7800000000000002\u001b[)/10.0 = 0.9780000000000001\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001]]\u001b[\n",
-            "\u001b[34m[-8.0, [0.96, 0.9400000000000001]]\u001b[\n",
-            "(-8.0-\u001b[32m1.9\u001b[)/5.0 = -1.98\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001, -1.98]]\u001b[\n",
-            "\u001b[34m[6.0, [1.92, -5.58]]\u001b[\n",
-            "(6.0-\u001b[32m-3.66\u001b[)/10.0 = 0.966\n",
-            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001, -1.98, 0.966]]\u001b[\n",
-            "\n"
+            "10 loops, best of 5: 138 ms per loop\n",
+            "[1.0, -2.0, 1.0]\n"
           ]
         }
       ]
