--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -5,10 +5,8 @@
     "colab": {
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "0okkjS6imtMS"
-      ],
-      "authorship_tag": "ABX9TyMz2YvOWCS68A1LEOcAvBpK",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOJ495RtVj9KV18bdALA6Nj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +106,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": null,
+      "execution_count": 689,
       "outputs": []
     },
     {
@@ -119,14 +117,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "a3209da9-0b08-4bd1-fdff-775316b71657"
+        "outputId": "f3d403b3-f66c-4c90-a590-118c3066a4d2"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
         "Numero_Binario =  10111#@param\n",
         "convert_bxd(Numero_Binario, bin=True)"
       ],
-      "execution_count": null,
+      "execution_count": 690,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,14 +143,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "0fe97a9e-67de-4c84-ce28-b02eab27c875"
+        "outputId": "cac3a639-3b4c-441a-e4e2-f75858cf2749"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
         "Numero_Decimal =  13.25#@param\n",
         "convert_bxd(Numero_Decimal, dec=True)"
       ],
-      "execution_count": null,
+      "execution_count": 691,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +178,7 @@
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss}}$\n",
-        "#@markdown > $\\color{gray}{\\text{eliminacao_gauss}}$\n",
+        "#@markdown > $\\color{gray}{\\text{eliminacao_gauss(hea)}}$\n",
         "\n",
         "def eliminacao_gauss(hea):\n",
         "    import numpy as np\n",
@@ -215,7 +213,7 @@
         "\n",
         "    return arr        "
       ],
-      "execution_count": null,
+      "execution_count": 692,
       "outputs": []
     },
     {
@@ -226,16 +224,16 @@
         },
         "id": "8ZSab6ZEJfKR",
         "cellView": "form",
-        "outputId": "c445ce2d-f896-4fb3-d106-7d3129ec45db"
+        "outputId": "ca56ca79-2341-4d63-c677-9bffcec87962"
       },
       "source": [
-        "matriz_para_triangular = [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]] #@param\n",
-        "#@markdown > $\\color{gray}{\\text{eliminacao_gauss(matriz_para_triangular)}}$\n",
-        "matriz_triangulada = eliminacao_gauss(matriz_para_triangular)\n",
-        "print(f'\\033[32m{matriz_triangulada}'); print()\n",
-        "%timeit eliminacao_gauss(matriz_para_triangular)"
+        "matriz_gauss = [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]] #@param\n",
+        "#@markdown > $\\color{gray}{\\text{matriz = eliminacao_gauss(matriz_gauss)}}$\n",
+        "matriz = eliminacao_gauss(matriz_gauss)\n",
+        "print(f'\\033[32m{matriz}'); print()\n",
+        "%timeit eliminacao_gauss(matriz_gauss)"
       ],
-      "execution_count": null,
+      "execution_count": 693,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +244,7 @@
             " [-0.0000e+00  0.0000e+00  4.5000e+01 -1.4400e+02 -2.2500e+02]\n",
             " [-0.0000e+00  0.0000e+00  0.0000e+00 -8.2620e+03 -2.7945e+04]]\n",
             "\n",
-            "1000 loops, best of 5: 731 µs per loop\n"
+            "1000 loops, best of 5: 791 µs per loop\n"
           ]
         }
       ]
@@ -267,8 +265,8 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # $\\color{Turquoise}{\\text{Mostrando matriz resultao do Método de Gauss}}$\n",
-        "#@markdown > $\\color{gray}{\\text{resultado}}$\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Matriz resultado do Método de Gauss}}$\n",
+        "#@markdown > $\\color{gray}{\\text{resultados(hea)}}$\n",
         "\n",
         "def resultado(hea):\n",
         "    '''Entre apenas com uma matriz triangular inferior'''\n",
@@ -285,7 +283,7 @@
         "\n",
         "    return mt"
       ],
-      "execution_count": null,
+      "execution_count": 694,
       "outputs": []
     },
     {
@@ -296,15 +294,15 @@
         },
         "id": "zeiJmNBSKGNB",
         "cellView": "form",
-        "outputId": "1cd28ce1-0e2b-41d3-c21c-d2f66c607771"
+        "outputId": "27628256-a5d4-461a-a6a3-8830f48b75b1"
       },
       "source": [
-        "matriz_resultados =  matriz_triangulada#@param\n",
+        "matriz_resultados =  matriz#@param\n",
         "#@markdown > $\\color{gray}{\\text{resultado(matriz_resultados)}}$\n",
         "print(f'\\033[32mM\\u1D40 = {resultado(matriz_resultados)}'); print()\n",
         "%timeit resultado(matriz_resultados)"
       ],
-      "execution_count": null,
+      "execution_count": 695,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +310,8 @@
           "text": [
             "\u001b[32mMᵀ = [3.6176470588235285, -4.14705882352941, 5.823529411764706, 3.3823529411764706]\n",
             "\n",
-            "10000 loops, best of 5: 17.5 µs per loop\n"
+            "The slowest run took 6.03 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "10000 loops, best of 5: 18.5 µs per loop\n"
           ]
         }
       ]
@@ -334,7 +333,7 @@
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss Jordan}}$\n",
-        "#@markdown > $\\color{gray}{\\text{gauss_jordan}}$\n",
+        "#@markdown > $\\color{gray}{\\text{gauss_jordan(hea)}}$\n",
         "\n",
         "def gauss_jordan(hea):\n",
         "\n",
@@ -370,7 +369,7 @@
         "            simple(arr)\n",
         "    return arr"
       ],
-      "execution_count": null,
+      "execution_count": 696,
       "outputs": []
     },
     {
@@ -381,16 +380,16 @@
         },
         "id": "oD5DwgUj4zrq",
         "cellView": "form",
-        "outputId": "bfcb9792-0a72-49e3-986e-0c9469999aea"
+        "outputId": "18733c26-22b1-486c-d714-98d5a21a1be8"
       },
       "source": [
-        "matriz_para_triangular =  [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]]#@param\n",
-        "#@markdown > $\\color{gray}{\\text{gauss_jordan(matriz_para_triangular)}}$\n",
-        "arr = gauss_jordan(matriz_para_triangular)\n",
+        "matriz_gauss_jordan = [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]]#@param\n",
+        "#@markdown > $\\color{gray}{\\text{gauss_jordan(matriz_gauss_jordan)}}$\n",
+        "arr = gauss_jordan(matriz_gauss_jordan)\n",
         "print(f'\\033[32m{arr}'); print()\n",
-        "%timeit gauss_jordan(matriz_para_triangular)"
+        "%timeit gauss_jordan(matriz_gauss_jordan)"
       ],
-      "execution_count": null,
+      "execution_count": 697,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +400,7 @@
             " [-0.         -0.          1.         -0.          5.82352941]\n",
             " [ 0.         -0.         -0.          1.          3.38235294]]\n",
             "\n",
-            "1000 loops, best of 5: 949 µs per loop\n"
+            "1000 loops, best of 5: 976 µs per loop\n"
           ]
         }
       ]
@@ -418,20 +417,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yaxfm3_s9Jw_"
+        "id": "yaxfm3_s9Jw_",
+        "cellView": "form"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Método de Jacobi}}$\n",
-        "#@markdown > $\\color{gray}{\\text{m_jacobi}}$\n",
+        "#@markdown > $\\color{gray}{\\text{m_jacobi(hea, ci=[0, 0, 0], ni=10, tc=2, trc=False)}}$\n",
         "\n",
-        "def m_jacobi(hea, ci=[0, 0, 0], ni=10):\n",
+        "def m_jacobi(hea, ci=[0, 0, 0], ni=10, tc=2, trc=False):\n",
         "\n",
         "    import numpy as np\n",
+        "\n",
+        "    def trunc(arr1, arr2, tr=2):\n",
+        "        '''\n",
+        "            Retorna um booleano se arr1 == arr2\n",
+        "        '''\n",
+        "\n",
+        "        def truncv(values, decs=0):\n",
+        "            values = np.array(values)\n",
+        "            return np.trunc(values*10**decs)/(10**decs)\n",
+        "\n",
+        "        arr1, arr2 = truncv(arr1, decs=tr), truncv(arr2, decs=tr)\n",
+        "\n",
+        "        comp = np.all([arr1==arr2, [True for _ in range(len(arr1))]]) \n",
+        "        return comp\n",
         "\n",
         "    def v(arr, cond, line=0):\n",
         "        '''\n",
         "            Retorna uma matriz solução\n",
         "        '''\n",
+        "        \n",
+        "        def max_diagonal(arr):\n",
+        "                \n",
+        "            def permutation(arr, shift, end):\n",
+        "                arr = np.insert(arr, end, arr[shift], axis=0)\n",
+        "                finale = shift + 1 if shift > end else shift \n",
+        "                arr = np.delete(arr, finale, axis=0)\n",
+        "                return arr \n",
+        "\n",
+        "            for i in range(len(arr)):\n",
+        "                arr = permutation(\n",
+        "                    arr,\n",
+        "                    np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "                    i\n",
+        "                )\n",
+        "            return arr\n",
+        "\n",
+        "        arr = max_diagonal(arr)\n",
+        "\n",
         "        n, rs = [arr[line][-1]], 0\n",
         "        n.append(\n",
         "            [x*i for x, i, c in zip(arr[line], cond, range(len(arr[0])))\n",
@@ -443,30 +476,21 @@
         "\n",
         "        return x\n",
         "\n",
-        "    ci = [ci]\n",
-        "\n",
-        "    arr = np.array(hea, dtype=np.float64, copy=True)\n",
+        "    \n",
+        "    ci = [ci]; arr = np.array(hea, dtype=np.float64, copy=True)\n",
         "\n",
         "    for j in range(ni):\n",
         "        ci.append([])\n",
         "        for i in range(len(arr)):\n",
         "            ci[j+1].append(v(arr, ci[j], line=i))\n",
+        "        \n",
+        "        if trc:\n",
+        "            if trunc(ci[j], ci[j+1], tr=tc):\n",
+        "                break\n",
         "    \n",
         "    return ci"
       ],
-      "execution_count": 287,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ICUBvDaN-wtu"
-      },
-      "source": [
-        "arr = [[10, 2, 1, 7], [1, 5, 1, -8], [2, 3, 10, 6]]\n",
-        "ci = [1, 2, 3]"
-      ],
-      "execution_count": 289,
+      "execution_count": 698,
       "outputs": []
     },
     {
@@ -475,21 +499,40 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YdPronVw7Pih",
-        "outputId": "3a5b2496-9eff-4a84-daff-767b95c046a6"
+        "id": "ICUBvDaN-wtu",
+        "cellView": "form",
+        "outputId": "cc6d89ed-e281-4f6d-d4ce-0c27212342a9"
       },
       "source": [
-        "%timeit m_jacobi(arr, ni=10000)\n",
-        "print(m_jacobi(arr, ni=10000)[-1])"
+        "import numpy as np\n",
+        "\n",
+        "matriz_m_jacobi = [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]]#@param\n",
+        "condicoes_iniciais = [0, 0, 0, 0] #@param\n",
+        "loops = 27 #@param {type:\"slider\", min:0, max:50, step:1}\n",
+        "trun = True #@param {type:\"boolean\"}\n",
+        "truncamento_decimal = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
+        "#@markdown > $\\color{gray}{\\text{matriz_j = m_jacobi(matriz_m_jacobi, ci=condicoes_iniciais, ni=loops, tc = truncamento_decimal)}}$\n",
+        "matriz_j = np.array(m_jacobi(matriz_m_jacobi, ci=condicoes_iniciais, ni=loops, tc = truncamento_decimal, trc=trun), dtype=np.float64)\n",
+        "# print(f'\\033[32m{matriz_j}'); print()\n",
+        "print(f'\\033[32m{matriz_j}'); print()\n",
+        "%timeit m_jacobi(matriz_m_jacobi, ci=condicoes_iniciais, ni=loops, tc = truncamento_decimal)"
       ],
-      "execution_count": 294,
+      "execution_count": 699,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10 loops, best of 5: 138 ms per loop\n",
-            "[1.0, -2.0, 1.0]\n"
+            "\u001b[32m[[ 0.          0.          0.          0.        ]\n",
+            " [ 1.66666667 -2.33333333  3.75        2.        ]\n",
+            " [ 2.63888889 -3.91666667  4.91666667  2.77777778]\n",
+            " [ 3.56481481 -4.0462963   5.70833333  3.30555556]\n",
+            " [ 3.5632716  -4.13425926  5.77314815  3.34876543]\n",
+            " [ 3.61471193 -4.14146091  5.81712963  3.37808642]\n",
+            " [ 3.6146262  -4.14634774  5.82073045  3.38048697]\n",
+            " [ 3.617484   -4.14674783  5.82317387  3.38211591]]\n",
+            "\n",
+            "10 loops, best of 5: 19 ms per loop\n"
           ]
         }
       ]
@@ -506,13 +549,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "f3LZTlcc0r63"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R2ocoPDh0t9h"
+      },
+      "source": [
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "ca367325-7ca0-4ed7-9a9e-3bc37df219dc"
+        "outputId": "85bd4679-5dce-4ae4-9045-99dc6c3d8a93"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Contatos}}$\n",
@@ -554,7 +617,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": null,
+      "execution_count": 700,
       "outputs": [
         {
           "output_type": "display_data",
