--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -30,7 +30,7 @@
         "QHCWwxY0AH49"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP354mru2ltiLu8nz+Rn8JV",
+      "authorship_tag": "ABX9TyPrXFpmjym/u14M6iyRs3ZC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,7 +207,7 @@
         "id": "Clj1aVzjFQ7G"
       },
       "source": [
-        "### $\\color{#00b6ff}{\\text{Convertendo um número $\\textbf{Binário}$ em $\\textbf{Decimal}$}}$\n"
+        "### $\\color{#00b6ff}{\\text{Convertendo um número Binário em Decimal}}$\n"
       ]
     },
     {
@@ -240,7 +240,7 @@
         "id": "FswsPMDlFV-z"
       },
       "source": [
-        "### $\\color{#00b6ff}{\\text{Convertendo um número $\\textbf{Decimal}$ em $\\textbf{Binário}$}}$\n"
+        "### $\\color{#00b6ff}{\\text{Convertendo um número Decimal em Binário}}$\n"
       ]
     },
     {
@@ -250,6 +250,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "cellView": "form",
         "outputId": "f2414946-0309-4e85-90ea-db40415643f8"
       },
       "source": [
