--- a/primeira_prova_CN.ipynb
+++ b/primeira_prova_CN.ipynb
@@ -6,13 +6,12 @@
       "name": "primeira_prova_CN.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "N4paYYw4lDl0",
         "goC-HAicnBcr",
         "LSCEs1Wj1ZjC",
         "SYWuGsZ-5hLO",
         "SupL4iHCEP4y"
       ],
-      "authorship_tag": "ABX9TyN4hFqsxjpktwZEfbM5FOX4",
+      "authorship_tag": "ABX9TyOUduVUMO3L7y0Ubzt+lB2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,7 +182,7 @@
         "\n",
         "# SEM OS COMENTÁRIOS A FUNÇÃO gauss TERIAS ESSA CARA:\n",
         "\n",
-        "# def eliminacao_gauss(hea):\n",
+        "# def gauss(hea):\n",
         "#     import numpy as np\n",
         "#     \n",
         "#     arr = np.array(hea, dtype=np.float64, copy=True)\n",
@@ -217,7 +216,7 @@
         "# \n",
         "#     return arr"
       ],
-      "execution_count": 66,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -428,11 +427,18 @@
         "            # MATRIZ, REALIZE O QUE SE PEDE ABAIXO\n",
         "            if not k-1 < 0:\n",
         "                \n",
-        "                # FAZENDO A VARIÁVEL bl RECEBER \n",
+        "                # FAZENDO A VARIÁVEL bl RECEBER UMA LISTA CRIADA A\n",
+        "                # PARTIR DO LOOP AO QUAL ESTÁ INSERIDA \n",
         "                bl.append([i[x] for x in range(k)])\n",
+        "        \n",
+        "        # ORDENANDO EM APENAS UMA LINHA A MATRIZ/LISTA bl\n",
         "        bl = np.hstack(bl)\n",
         "\n",
+        "        # CONDIÇÃO: SE O PRIMEIRO TERMO DA PRIMEIRA LINHA FOR O, RODE\n",
+        "        # A FUNÇÃO gauss E CONTINUE NO LOOP\n",
         "        if len(np.where(bl > 0)[0]) != 0:\n",
+        "            \n",
+        "            # RODANDO A FUNÇÃO gauss E ATUALIZANDO arr\n",
         "            arr = gauss(arr)\n",
         "        else:\n",
         "            break\n",
