--- a/primeira_prova_CN.ipynb
+++ b/primeira_prova_CN.ipynb
@@ -6,12 +6,13 @@
       "name": "primeira_prova_CN.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "N4paYYw4lDl0",
         "goC-HAicnBcr",
         "LSCEs1Wj1ZjC",
         "SYWuGsZ-5hLO",
         "SupL4iHCEP4y"
       ],
-      "authorship_tag": "ABX9TyOUduVUMO3L7y0Ubzt+lB2F",
+      "authorship_tag": "ABX9TyO3vMu/hX6aYYQVqslQUdXN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -440,18 +441,42 @@
         "            \n",
         "            # RODANDO A FUNÇÃO gauss E ATUALIZANDO arr\n",
         "            arr = gauss(arr)\n",
+        "        \n",
+        "        # CASO CONTRÁRIO\n",
         "        else:\n",
+        "\n",
+        "            # PARE DE RODAR O LOOP\n",
         "            break\n",
         "\n",
+        "    # NOTA: Percorrendo a matriz termo a termo e os trasformando de\n",
+        "    # acordo com o método de gauss\n",
         "\n",
-        "    # \n",
-        "    for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
-        "        for l, k in zip(reversed(range(cm)), range(1, len(arr))): # linha\n",
-        "            for c in range(len(arr[0])): # coluna da linha\n",
+        "    # CRIANDO UM LOOP E ARMAZENANDO NA VARIÁVEL cm OS NÚMEROS DAS\n",
+        "    # COLUNAS A CADA LOOP DE FORMA REVERSA \n",
+        "    for cm in reversed(range(1, len(arr[0])-1)):\n",
+        "        \n",
+        "        # CRIANDO UM LOOP E VAZENDO AS VARIÁVEIS l E k RECEBER AS\n",
+        "        # LINHAS DE FORMA REVERSA\n",
+        "        for l, k in zip(reversed(range(cm)), range(1, len(arr))):\n",
+        "            \n",
+        "            # CRIANDO UM LOOP E FAZENDO c PERCORRER AS COLUNAS DE\n",
+        "            # CADA LINHA\n",
+        "            for c in range(len(arr[0])):\n",
+        "\n",
+        "                # CONDIÇÃO: SE NÃO FOR A PRIMEIRA VEZ QUE O LOOP ACIMA\n",
+        "                # RODA, ENTÃO RODA O CÓDIGO ABAIXO\n",
         "                if not c:\n",
+        "\n",
+        "                    # DEFINIDO AS VARIAVEIS v1 E v2 COMO VALORES A SEREM\n",
+        "                    # CALCULADOS A CADA NOVA INTERAÇÃO\n",
         "                    v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
         "\n",
+        "                # EFETUANDO A OPENAÇÃO DE ESCALONAMENTO PARA CADA TERMO,\n",
+        "                # POR ISSO DOS LOOP ACIMA\n",
         "                arr[cm-k][c] = v1*arr[cm-k][c]-v2*arr[cm][c]\n",
+        "            \n",
+        "            # AO FINAL DO TERCEIRO LOOP, SIMPLIFIQUE A MATRIZ COM A FUNÇÃO\n",
+        "            # simple\n",
         "            simple(arr)\n",
         "\n",
         "    # AO FINAL DA FUNÇÃO jordan A MATRIZ MODIFICADA É RETORNADA.\n",
@@ -461,7 +486,7 @@
         "\n",
         "# SEM COMENTÁRIOS A FUNÇÃO TERIA ESSA CARA\n",
         "\n",
-        "# def gauss_jordan(hea):\n",
+        "# def jordan(hea):\n",
         "# \n",
         "#     import numpy as np\n",
         "# \n",
